info text de kiso

--- a/public/templates/agb/agb-kiso-de.html
+++ b/public/templates/agb/agb-kiso-de.html
@@ -1,41 +1,41 @@
 <div class="container">
-	<h2 class='text-orange'>Allgemeine Gesch&auml;tsbedingungen</h2>
+	<h2 class='text-orange'>Allgemeine Gesch&auml;tsbedingungen 2020</h2>
 	<div class="col-sm-8">
 	<ol>
 		<li><strong>Anmeldung</strong>
 			<ul>
 				<li><strong>Modalitäten</strong>
-					<p>Die Anmeldung eines Kindes zum KiSo kann ausschließlich über das Online-Anmeldeformular auf www.kiso.bz.it erfolgen. Falls innerhalb weniger Minuten nicht eine automatische Rückantwort an die angegebene E-Mail des Erziehungsberechtigten zum technischen Erfolg der Anmeldung erhalten wird, ist ein Fehler passiert und muss die Anmeldung erneut abgeschickt werden.</p>
-					<p>Innerhalb von fünf Tagen nach erfolgter Anmeldung informiert der Jugenddienst Bozen per E-Mail über den Status der Anmeldung, mit entsprechender Zahlungsaufforderung bzw. Position des Kindes auf der Warteliste, falls die maximale Teilnehmerzahl im Moment der Anmeldung bereits erreicht war.</p>
+					<p>Die Anmeldung eines Kindes zum KISO kann ausschließlich über das Online-Anmeldeformular auf www.KISO.bz.it erfolgen. Falls innerhalb weniger Minuten nicht eine automatische Rückantwort an die angegebene E-Mail des Erziehungsberechtigten zum technischen Erfolg der Anmeldung erhalten wird, ist ein Fehler passiert und muss die Anmeldung erneut abgeschickt werden.</p>
+					<p>Innerhalb von 5 Werktagen nach erfolgter Anmeldung informiert der Jugenddienst Bozen per E-Mail über den Status der Anmeldung, mit entsprechender Zahlungsaufforderung oder Verweis auf die Warteliste, falls die maximale Teilnehmerzahl im Moment der Anmeldung bereits erreicht war.</p>
 				</li>
 				<li><strong>Verbindlichkeit</strong>
-					<p>Die Anmeldung wird erst durch die endgültige Bestätigung durch den Jugenddienst Bozen rechtsgültig und verbindlich, welche wiederum erst nach Zahlungseingang des vollen Teilnahmebeitrages erfolgt (siehe  Punkt 2.2).</p>
+					<p>Die Anmeldung wird erst nach Zahlungseingang des vollen Teilnahmebeitrages rechtsgültig und verbindlich (siehe Punkt 2.2). Die Bestätigung des Zahlungseingangs ist im Menüfeld „Meine Anmeldungen“ ersichtlich. Dies kann je nach Anzahl der Buchungen bis zu 5 Werktage dauern.</p>
 				</li>
 			</ul>
 		</li>
 		<li><strong>Teilnahmebeitrag</strong>
 			<ul>
 				<li><strong>Beitragshöhe und Zahlungsmodalitäten</strong>
-					<p>Der Teilnahmebeitrag beträgt 80,00 Euro pro Woche und Kind. Darin sind eine tägliche Jause, Mittagessen sowie ein KiSo-T-Shirt enthalten. Wer das Projekt unterstützen möchte, kann also mit einem entsprechenden Solidaritätszuschlag auch 90,00 Euro pro Woche und Kind bezahlen. (Anmerkung: Der so genannte „Realpreis“ würde sich pro Woche auf rund 240,00 Euro belaufen.)</p>
-					<p>Bei Anmeldung von weiteren Geschwisterkindern für die selbe Woche, wird auf jedes zusätzliche Kind ein Rabatt von 10,00 Euro gewährt. Der Teilnahmebeitrag muss mittels Banküberweisung auf das Konto des Jugenddienst Bozen bei der Raiffeisenkasse Bozen (IBAN: IT 58 J 08081 11600 000305003229) eingezahlt werden.</p>
+					<p>Der Teilnahmebeitrag beträgt 80,00 Euro pro Woche und Kind. Darin sind eine tägliche Jause, Mittagessen sowie ein KISO-T-Shirt enthalten. Wer das Projekt unterstützen möchte, kann also mit einem entsprechenden Solidaritätszuschlag auch 90,00 Euro pro Woche und Kind bezahlen. (Anmerkung: Der so genannte „Realpreis“ würde sich pro Woche auf rund 240,00 Euro belaufen.)</p>
+					<p>Bei Anmeldung von weiteren Geschwisterkindern für die selbe Woche, wird auf jedes zusätzliche Kind ein Rabatt von 10,00 Euro gewährt. Der Teilnahmebeitrag muss mittels Banküberweisung auf das Konto des Jugenddienst Bozen bei der Raiffeisenkasse Bozen (IBAN: IT 58 J 08081 11600000305003229) eingezahlt werden.</p>
 				</li>
 				<li><strong>Zahlungsfrist</strong>
-					<p>Der Teilnahmebeitrag muss mittels Banküberweisung auf das Konto des Jugenddienst Bozen innerhalb von fünf Werktagen ab Versand der Zahlungsaufforderung eingezahlt werden. Bei der Überweisung muss als Einzahlungsgrund „KISO 2019“ und der Name der TeilnehmerInnen angegeben werden. Die Anmeldung ist erst mit dem Eingang des vollen Teilnahmebeitrages gültig, nach Ablauf der Zahlungsfrist wird das Kind ohne zusätzlicher Zahlungsaufforderung auf die Warteliste gesetzt.</p>
+					<p>Der Teilnahmebeitrag muss mittels Banküberweisung auf das Konto des Jugenddienst Bozen innerhalb von fünf Werktagen ab Versand der Zahlungsaufforderung eingezahlt werden. Bei der Überweisung muss als Einzahlungsgrund „KISO 2020“ und der Name der Teilnehmer*innen angegeben werden. Die Anmeldung ist erst mit dem Eingang des vollen Teilnahmebeitrages gültig, nach Ablauf der Zahlungsfrist wird das Kind ohne zusätzlicher Zahlungsaufforderung auf die Warteliste gesetzt.</p>
 				</li>
 				<li><strong>Rückerstattung</strong>
-					<p>Der Teilnahmebeitrag wird nur im Falle bescheinigter Krankheit (d.h. Vorlage ärztliches Zeugnis) oder unvorhersehbarer Ereignisse in voller Höhe zurückerstattet. Bei einer Abmeldung vor Beginn der 1. KiSo-Woche werden 50% des bezahlten Teilnahmebeitrages einbehalten.  Bei Abmeldungen nach Beginn der 1. KiSo-Woche wird der volle Teilnahmebeitrag einbehalten.</p>
+					<p>Der Teilnahmebeitrag wird nur im Falle bescheinigter Krankheit (d.h. Vorlage ärztliches Zeugnis) oder unvorhersehbarer Ereignisse in voller Höhe zurückerstattet. Bei einer Abmeldung vor Beginn der 1. KISO-Woche werden 50% des bezahlten Teilnahmebeitrages einbehalten. Bei Abmeldungen nach Beginn der 1. KISO-Woche wird der volle Teilnahmebeitrag einbehalten.</p>
 				</li>
 			</ul>
 		</li>
 		<li><strong>Versicherung und Aufsicht</strong>
-			<p>Alle KiSo-TeilnehmerInnen sind während der Austragung des Programms über die von der Arbeitsgemeinschaft der Jugenddienste (AGJD) abgeschlossene Haftpflichtversicherung auf Schäden gegen Dritte gedeckt.</p>
-			<p>Die Eltern bzw. Erziehungsberechtigten übernehmen die Verantwortung für den Hin- und Rückweg des Kindes zum KiSo-Austragungsort. Untertags werden die Kinder von den BetreuerInnen beaufsichtigt.</p>
+			<p>Alle KISO-Teilnehmer*innen sind während der Austragung des Programms über die von der Arbeitsgemeinschaft der Jugenddienste (AGJD) abgeschlossene Haftpflichtversicherung auf Schäden gegen Dritte gedeckt.</p>
+			<p>Die Eltern bzw. Erziehungsberechtigten übernehmen die Verantwortung für den Hin- und Rückweg des Kindes zum KISO-Austragungsort. Untertags werden die Kinder von den Betreuer*innen beaufsichtigt.</p>
 		</li>
 		<li><strong>Beeinträchtigung und Unverträglichkeiten</strong>
-			<p>Bei jeglichen körperlichen oder geistigen Beeinträchtigungen bzw. Nahrungsmittel-Unverträglichkeiten eines teilnehmenden Kindes müssen die Eltern innerhalb einer Frist von zwei Wochen ab erfolgter Anmeldung dem Jugenddienst Bozen ein entsprechendes ärztliches Zeugnis vorlegen. Andernfalls wird der Jugenddienst Bozen dies während des Projekts nicht berücksichtigen.</p>
+			<p>Bei jeglichen körperlichen oder geistigen Beeinträchtigungen bzw. Nahrungsmittel- Unverträglichkeiten eines teilnehmenden Kindes müssen die Eltern innerhalb einer Frist von zwei Wochen ab erfolgter Anmeldung dem Jugenddienst Bozen ein entsprechendes ärztliches Zeugnis vorlegen. Andernfalls wird der Jugenddienst Bozen dies während des Projekts nicht berücksichtigen.</p>
 		</li>
 		<li><strong>Allgemein</strong>
-			<p>Mit der Anmeldung erklärt sich das Elternteil und Erziehungsberechtigter mit obigen Bedingungen einverstanden. Für Rückfragen stehen die MitarbeiterInnen des Jugenddienst Bozen gerne zur Verfügung.</p>
+			<p>Mit der Anmeldung erklärt sich das Elternteil und Erziehungsberechtigter mit obigen Bedingungen einverstanden. Für Rückfragen stehen die Mitarbeiter*innen des Jugenddienst Bozen gerne zur Verfügung.</p>
 		</li>
 	</ol>
 	</div>
