--- a/public/templates/info/info-kiso-de.html
+++ b/public/templates/info/info-kiso-de.html
@@ -1,85 +1,71 @@
 <div class='container'>
 	<h2><strong>KiSo – Kindersommer 2020</strong></h2>
-	<p>
-		Nähere Infos folgen in Kürze
-	</p>
-	<!--
-	<img src="./../../../../assets/KISO2019.jpg" style="height:500px;float:left;margin-right:15px" />
+	<!--<img src="./../../../../assets/KISO2019.jpg" style="height:500px;float:left;margin-right:15px" />-->
 	<h4>Wer darf daran teilnehmen</h4>
 	<p>Für Grundschulkinder aller Muttersprachen.<br />Das Programm wird in deutscher Sprache
 		angeboten, somit werden genügend Grundkenntnisse der deutschen Sprache vorausgesetzt. Der KiSo ist kein Sprachkurs.</p>
 	<h4>Wie viele Kinder dürfen Teilnehmen?</h4>
 	<p>Maximal 42 Kinder pro Woche</p>
 	<h4>Wann und wo findet der KiSo statt?</h4>
-	<p><strong><time>17. Juni - 02. August 2019</time></strong><br />Zentrum Maria Heim, Neustifter Weg 5</p>
-	<p>Von Montag bis Freitag von 8:30 bis 15:00 Uhr<br />Zwischen 7:45 und 8:30 Uhr können die Eltern ihre Kinder bringen; Abholzeit 15.00 – 15.30 Uhr</p>
+	<p><strong><time>17. Juni - 31. Juli 2020</time></strong><br />Zentrum Maria Heim, Neustifter Weg 5</p>
+	<p>Von Montag bis Freitag von 8:30 bis 15:00 Uhr (Die 1. Juniwoche beginnt mittwochs)*<br />Zwischen 7:45 und 8:30 Uhr können die Eltern ihre Kinder bringen; Abholzeit 15.00 – 15.30 Uhr</p>
 	<h4>Kosten:</h4>
 	<p>
-	80 € pro Kind & Woche<br />
-	NEU: freiwilliger Solaridätspreis von 90 € pro Woche, um das Projekt zu unterstützen<br />
-	Für Geschwisterkinder 70 € pro Woche<br />
+	80 € pro Kind &amp; Woche *(1. Juniwoche: 50,00 Euro)<br />
+	freiwilliger Solaridätspreis von 90 € pro Woche, um das Projekt zu unterstützen<br />
+	Für Geschwisterkinder 70 € pro Woche *(1. Juniwoche: 45,00 Euro)<br />
 	Im Preis inbegriffen: Kinderbetreuung, Mittagessen, Jause, T-Shirt
     </p>
 	<h4>Programm:</h4>
-	<p>Die Kinder halten sich viel im Freien auf, aber auch für regenreiche und hitzige Sommertage ist für Programm im Haus gesorgt. Bei schönem Wetter wird einmal wöchentlich ein Ausflug in der Bozner Umgebung gemacht und einmal wöchentlich im Garten gegrillt.</p>
+	<p>Die Kinder halten sich viel im Freien auf, aber auch für regenreiche und hitzige Sommertage ist für 	Programm im Haus gesorgt. Bei schönem Wetter wird einmal wöchentlich ein Ausflug in der Bozner Umgebung gemacht und einmal wöchentlich im Garten gegrillt.</p>
 	<p>Wichtig ist uns, eine gute Betreuung für die Kinder - und dadurch Entlastung für die Eltern – anzubieten. Die Kinder sollen sich mit viel Freiraum, aber auch gezielten Programmen unter Gleichaltrigen wohl fühlen. Im Spiel können die Kinder frei und ungezwungen ihre Fähigkeiten entfalten und Werte, die für das Zusammenleben mit anderen Menschen wichtig sind, kennen und respektieren lernen.</p>
-	<h4>BetreuerInnen-Team:</h4>
-	<p>Die Sozialpädagogin Martina Zampedri wird das Projekt leiten. Sie wird zusammen mit einem sieben- bis neunköpfigen Team (16 - 26 Jahre) die Kinder betreuen. Das Team besteht aus Bozner Jungscharleiter*innen, Jugendlichen des „ExPeerience“ - Projekts vom Jugendzentrum Papperlapapp und pädagogisch interessierten und/oder erfahrenen Jugendlichen.</p>
+	<h4>Betreuer*innen-Team:</h4>
+	<p>Die Sozialpädagogin Martina Zampedri wird das Projekt auch heuer wieder leiten. Sie wird zusammen mit einem sieben- bis neunköpfigen Team (16 - 26 Jahre) die Kinder betreuen. Das Team besteht aus Bozner Jungscharleiter*innen, Jugendlichen des „ExPeerience“ - Projekts vom Jugendzentrum Papperlapapp und pädagogisch interessierten und/oder erfahrenen Jugendlichen.</p>
 	<h4>Anmeldung:</h4>
-	<p>Die Online-Anmeldung findet ab Donnerstag, <strong><time>14. März 2019 ab 19.00 Uhr</time></strong> unter <strong><a href="www.kiso.bz.it">www.kiso.bz.it</a></strong> statt. Wichtig: Alle Eltern müssen einen Account mit Username und Passwort auf selbiger Internetseite erstellen. Der Account kann ab 7. März 2019 angelegt werden und ist für weitere Jahre wieder verwendbar.<br />Für Fragen: <a href="mailto:kiso@jd.bz.it">kiso@jd.bz.it</a>, <a href="tel:0471 972098">0471 972098</a> (nachmittags)</p>
+	<p>Die Online-Anmeldung findet ab Donnerstag, <strong><time>3. März 2020 ab 19.00 Uhr</time></strong> unter <strong><a href="www.kiso.bz.it">www.kiso.bz.it</a></strong> statt. Wichtig: Alle Eltern müssen einen Account mit Username und Passwort auf selbiger Internetseite erstellen. Der Account kann ab 25. Februar 2020 angelegt werden und ist für weitere Jahre wieder verwendbar.<br />Für Fragen: <a href="mailto:kiso@jd.bz.it">kiso@jd.bz.it</a>, <a href="tel:0471 972098">0471 972098</a> (nachmittags)</p>
 	<h4>Wichtig:</h4>
 	<p>Alle Eltern und Erziehungsberechtigten dürfen nur die eigenen Kinder einschreiben</p>
 	<p>Das Kind muss bereits die erste Klasse Grundschule besucht haben (Ausnahme: Geschwisterkinder, die das letzte Kindergartenjahr besucht haben)<br />Die Anmeldung ist verbindlich, wenn Sie die schriftliche Bestätigung des Jugenddienstes Bozen erhalten haben</p>
-	<adress style="font-style:italic"><mark>Jugenddienst Bozen</mark><br />Pfarrplatz 24, piazza Parrocchia<br />39100 Bozen/Bolzano<br />0471 972098 (15.00-18.30 h)<br /><a href="mailto:kiso@jd.bz.it">kiso@jd.bz.it</a></adress><br />
-	<img src="./../../../../assets/jdb.png" style="vertical-align:bottom;height:110px;margin-left:15px" />
+	<p><strong>Bitte lesen Sie sich aufmerksam die Allgemeinen Geschäftsbedingungen (AGB’s) durch!</strong></p>
+	<!--<adress style="font-style:italic"><mark>Jugenddienst Bozen</mark><br />Pfarrplatz 24, piazza Parrocchia<br />39100 Bozen/Bolzano<br />0471 972098 (15.00-18.30 h)<br /><a href="mailto:kiso@jd.bz.it">kiso@jd.bz.it</a></adress><br />
+	<img src="./../../../../assets/jdb.png" style="vertical-align:bottom;height:110px;margin-left:15px" />-->
 	<br />
 	<br />
-	<h2><strong>Unsere Sommerprojekte für Kids von 11-15 Jahren</strong></h2>
-	<h4>Anmeldung ab <strong><time>15. März 2019</time></strong></h4>
-	<h3>Film ab</h3>
-	<img src="./../../../../assets/Kiso_Film.jpg" style="height:110px;float:left;margin-right:15px" />
-	<p>Let's make a movie! Was genau passiert vor und hinter der Kamera? Bei unserem Filmworkshop lernen wir die vielfältigen Bereiche rund um die Entstehung eines Films kennen, indem wir selbst drehen, schneiden und unseren eigenen Film gestalten. Wir können unseren Ideen freien Lauf lassen und schlüpfen auch selbst in die verschiedenen Rollen, die es am Set braucht. Bereit? Dann Film ab!</p>
-	<p>
-	Alter: 11-15 Jahre<br />
-	Zeitraum: 8. bis 12. Juli 2019, 09.00 bis 16.00 Uhr (inkl. Mittagessen)<br />
-	Ort: Lamplhaus Rentsch, Bozen<br />
-	Kosten: 80,00 Euro / Teilnehmer*in<br />
-	Referent: Willy Theil<br />
-	Anmeldebeginn: 15. März 2019 auf <a href="www.kiso.bz.it">www.kiso.bz.it</a><br />	
-	</p>
-	<h3>Hip Hop Performance</h3>
-	<img src="./../../../../assets/Kiso_HipHop.jpg" style="height:110px;float:left;margin-right:15px" />
-	<p>Hip-Hop ist mehr als nur ein Tanzstil: It’s a culture – in der Bewegung, Musik und Lebensstil zusammentreffen. Im Workshop werden Grundschritte und aufbauende Schrittkombinationen aus verschiedenen Stilrichtungen eingeübt, welche anschließend zu einer verrückten Choreo verschmelzen. Ready?... and 5,6,7,8! </p>
-	<p>
-	Alter: 11-15 Jahre<br />
-	Zeitraum: 15. bis 19. Juli 2019, 09.00 bis 16.00 Uhr (inkl. Mittagessen)<br />
-	Ort: Lamplhaus Rentsch, Bozen<br />
-	Kosten: 80,00 Euro / Teilnehmer*in<br />
-	Referentin: Valentina Bagnis<br />	
-	</p>
-	<h3>Fortnite Week</h3>
-	<img src="./../../../../assets/Kiso_Fortnite.jpg" style="height:110px;float:left;margin-right:15px" />
-	<p>Eine Woche ganz im Zeichen des „Gaming“. Es wird nicht nur gemeinsam das beliebte Fortnite gespielt, sondern wir tauchen tiefer in die Virtual Reality ein und beschäftigen uns anhand unterschiedlicher pädagogischer Methoden mit dem Medium „Videospiel“ an sich. Was steckt alles dahinter? Was macht ein gutes Videospiel aus? Welche Rollen nehmen wir dabei ein? Let’s play!</p>
-	<p>
-	Alter: 12-15 Jahre<br />
-	Zeitraum: 22. bis 26. Juli 2019, 09.00 bis 16.00 Uhr (inkl. Mittagessen)<br />
-	Ort: Lamplhaus Rentsch, Bozen<br />
-	Kosten: 80,00 Euro / Teilnehmer*in<br />
-	Referent: Lukas Paoli, in Zusammenarbeit mit Forum Prävention<br />
-	</p>
-	<h3>Dance & Film</h3>
-	<img src="./../../../../assets/Kiso_Dance.jpg" style="height:110px;float:left;margin-right:15px" />
-	<p>Filmemacher*innen und Tänzer*innen aufgepasst! Gemeinsam suchen wir uns fette Beats, entwickeln eine coole Choreo und planen ein Video oder einen Film dazu. Der Fantasie sind hier keine Grenzen gesetzt.</p>
-	<p>
-	Alter: 11-15 Jahre<br />
-	Zeitraum: 29. Juli bis 2. August 2019, , 09.00 bis 16.00 Uhr (inkl. Mittagessen)<br />
-	Ort: Lamplhaus Rentsch, Bozen<br />
-	Kosten: 80,00 Euro / Teilnehmer*in<br />
-	Referent*innen: Valentina Bagnis und Willy Theil<br />
-	</p>
--->
-
-	<!--<div ng-include='"templates/agb/agb-kiso-de.html"'></div>-->
+	<h2><strong>Summer weeks</strong></h2>
+	<p>Für 11- bis 15-Jährige aller Muttersprachen.<br />Das Programm wird in deutscher Sprache angeboten, somit werden genügend Grundkenntnisse der deutschen Sprache vorausgesetzt. Der KISO ist kein Sprachkurs.</p>
+	<p>Maximal 12 Kinder pro Woche</p>
+	<h4>Wann</h4>
+	<p>6. Juli - 31. Juli 2020<br />Von Montag bis Freitag von 8.30 bis 15.30 Uhr</p>
+	<h4>Wo</h4>
+	<p>Jugendzentrum papperlapapp, Pfarrplatz 24</p>
+	<h4>Kosten</h4>
+	<p>80 € pro Kind &amp; Woche<br />Freiwilliger Solidaritätspreis von 90 € pro Woche, um das Projekt zu unterstützen<br />Für Geschwisterkinder 70 € pro Woche<br />Im Preis inbegriffen: Workshop, Mittagessen, Jause, T-Shirt</p>
+	<br />
+	<h3>Abenteuer Mathematik</h3>
+	<h5>Andi Scartezzini &amp; Harald Niederseer</h5>
+	<p>Eine Woche lang einen neuen und spannenden Zugang zur Welt der Mathematik entdecken. Für alle die Mathematik lieben, aber auch eine neue Chance für diejenigen, die sagen &quot;in Mathe bin ich schlecht&quot; oder &quot;Mathe ist blöd&quot;!</p>
+	<p>Zeitraum: 6. bis 10. Juli 2020</p>
+	<br />
+	<h3>Theater Workshop</h3>
+	<h4>Miriam Dreher &amp; Nadja Tröster</h4>
+	<p>Du findest Schauspielen spannend und möchtest dich gerne auf einer Bühne ausprobieren? Du hast Lust auf Austausch mit gleichgesinnten Kids und möchtest lernen, wie man die eigenen Geschichten kreativ darstellen und ein selbst erfundenes Theaterstück auf die Beine stellen kann? Auf dich wartet eine Menge Spaß!</p>
+	<p>Zeitraum: 13. bis 17. Juli 2020</p>
+	<br />
+	<h3>Film &amp; Hip Hop</h3>
+	<h4>Valentina Bagnis &amp; Willy Theil</h4>
+	<p>Du brennst für Musik, interessierst dich für Film oder tanzt und schauspielst gerne? Hast Lust bei einem Musikvideo von der Idee bis zum fertigen Schnitt mit dabei zu sein? Würdest mal gerne vor oder hinter der Kamera stehen? Lernst gerne neue Leute kennen und möchtest mal mehr als nur ein TikTok Video drehen? Dann bist du hier genau richtig! Der Fantasie sind hier keine Grenzen gesetzt.</p>
+	<p>Zeitraum: 20. bis 24. Juli 2020</p>
+	<br />
+	<h3>Gaming Week</h3>
+	<h4>(Referenten ausständig)</h4>
+	<p>Eine Woche ganz im Zeichen des Videospiels. Es wird nicht nur gemeinsam gezockt, sondern wir tauchen tiefer in die Virtual Reality ein und beschäftigen uns anhand unterschiedlicher pädagogischer Methoden mit dem Medium „Videospiel“ an sich. Was steckt alles dahinter? Was macht ein gutes Videospiel aus? Welche Rollen nehmen wir dabei ein? Let’s play!</p>
+    <p>Zeitraum: 27. bis 31. Juli 2020</p>
+	<br />
+	<br />
+    <h4>Anmeldung:</h4>
+	<p>Die Online-Anmeldung findet ab Donnerstag, <strong><time>3. März 2020 ab 19.00 Uhr</time></strong> unter <strong><a href="www.kiso.bz.it">www.kiso.bz.it</a></strong> statt. Wichtig: Alle Eltern müssen einen Account mit Username und Passwort auf selbiger Internetseite erstellen. Der Account kann ab 25. Februar 2020 angelegt werden und ist für weitere Jahre wieder verwendbar.<br />Für Fragen: <a href="mailto:kiso@jd.bz.it">kiso@jd.bz.it</a>, <a href="tel:0471 972098">0471 972098</a> (nachmittags)</p>
+	<h4>Wichtig:</h4>
+	<p>Alle Eltern und Erziehungsberechtigten dürfen nur die eigenen Kinder einschreiben</p>
 
 	<img src="./../../../../assets/logo-jungschar.png" style="vertical-align:bottom;height:50px;margin-left:15px" />
 	<img src="./../../../../assets/raika.png" style="vertical-align:bottom;height:70px;margin-left:15px" />
