--- a/public/templates/registration/registrationOwnEdit.html
+++ b/public/templates/registration/registrationOwnEdit.html
@@ -71,7 +71,7 @@
 		</div>
 	</div>
 	<!-- HASHEALTHISSUES -->
-	<div class='col-sm-offset-2 col-sm4 form-group' ng-class='{ "has-error": registrationForm.schoolChild.$invalid }'>
+	<div ng-show="!platform.isJDUL()" class='col-sm-offset-2 col-sm4 form-group' ng-class='{ "has-error": registrationForm.schoolChild.$invalid }'>
 		<label for='hasHealthIssues' class='control-label col-sm-2'>{{"RESERVATION.LABEL_HEALTHISSUES_CHILD" | translate}}</label>
 		<div class='col-sm-8 btn-group' role='group' required>
 			<button type="button" ng-class='{"btn-info": hasHealthIssues && isHasHealthIssuesSet()}' class="btn btn-default" ng-click="setHasHealthIssues(true)">{{"BTN.YES" | translate}}</button>
@@ -109,7 +109,7 @@
 	</div>-->
 
 	<!-- HASDISABILITY -->
-	<div class='col-sm-offset-2 col-sm4 form-group'>
+	<div ng-show="!platform.isJDUL()" class='col-sm-offset-2 col-sm4 form-group'>
 		<label for='hasDisability' class='control-label col-sm-2'>{{"RESERVATION.LABEL_DISABILITY_CHILD" | translate}}</label>
 		<div class='col-sm-8 btn-group'>
 				<button type="button" ng-class='{"btn-info": hasDisability && isHasDisabilitySet()}' class="btn btn-default" ng-click="setHasDisability(true)">{{"BTN.YES" | translate}}</button>
