--- a/public/templates/agb/agb-kiso-it.html
+++ b/public/templates/agb/agb-kiso-it.html
@@ -1,37 +1,37 @@
 <div class="container">
-	<h2 class='text-orange'>Condizioni e termini</h2>
+	<h2 class='text-orange'>Condizioni e termini 2020</h2>
 	<div class="col-sm-8">
 	<ol>
 		<li><strong>Iscrizione</strong>
 			<ul>
 				<li><strong>Modalitá</strong>
-					<p>L’iscrizione di un/a bambino/a al KiSo puó avvenire esclusivamente tramite il modulo online sul sito www.kiso.bz.it. Se non dovesse ricevere entro pochi minuti una risposta automatica, all’indirizzo email indicato dal genitore, é necessario ripetere la modalità d'iscrizione in quanto è stato riscontrato un possibile errore.</p>
-					<p>Entro cinque giorni dall’avvenuta iscrizione, il Jugenddienst Bozen La informerá via mail sullo stato d'iscrizione, mandando un avviso di pagamento ovvero indicando la posizione del/la bambino/a sulla lista d’attesa.</p>
+					<p>L’iscrizione di un/a bambino/a al KISO può avvenire esclusivamente tramite il modulo online sul sito www.KISO.bz.it. Se non dovesse ricevere entro pochi minuti una risposta automatica, all’indirizzo email indicato dal genitore, è necessario ripetere la modalità d&#39;iscrizione in quanto è stato riscontrato un possibile errore.</p>
+					<p>Entro cinque giorni lavorativi dall’avvenuta iscrizione, il Jugenddienst Bozen La informerà via mail sullo stato d&#39;iscrizione, mandando un avviso di pagamento oppure un riferimento alla lista d&#39;attesa se il numero massimo di partecipanti era già stato raggiunto al momento dell&#39;iscrizione.</p>
 				</li>
-				<li><strong>Vincolanza</strong>
-					<p>L’ iscrizione sarà definitiva a tutti gli effetti solo dopo la conferma da parte dello Jugenddienst Bozen, dopo la verifica dell'avvenuto accredito (vedi punto 2.2).</p>
+				<li><strong>Forza vincolante</strong>
+					<p>L’ iscrizione sarà definitiva a tutti gli effetti solo dopo la verifica dell&#39;avvenuto accredito (vedi punto 2.2). La conferma di ricezione del pagamento è visibile nel campo di menu &quot;Le mie registrazioni&quot;. A seconda del numero di prenotazioni, questo può richiedere fino a 5 giorni lavorativi.</p>
 				</li>
 			</ul>
 		</li>
 		<li><strong>Quota d’iscrizione</strong>
 			<ul>
 				<li><strong>Importo e modalitá di pagamento</strong>
-					<p>La quota di partecipazione è di 80,00 Euro a settimana e per bambino. Questo include uno spuntino giornaliero, il pranzo e una maglietta KiSo. Se volete sostenere il progetto, potete pagare 90,00 Euro a settimana per bambino con un supplemento di solidarietà. (Nota: Il cosiddetto "prezzo reale" ammonterebbe a circa 240,00 Euro a settimana).</p>
+					<p>La quota di partecipazione è di 80,00 Euro a settimana e per bambino. Questo include uno spuntino giornaliero, il pranzo e una maglietta KISO. Se volete sostenere il progetto, potete pagare 90,00 Euro a settimana per bambino con un supplemento di solidarietà. (Nota: Il cosiddetto &quot;prezzo reale&quot; ammonterebbe a circa 240,00 Euro a settimana).</p>
 					<p>Per l’iscrizione di ogni successivo fratello/sorella alla medesima settimana verrà concesso uno sconto di 10,00 euro. La quota deve essere versata tramite bonifico bancario sul conto corrente intestato allo Jugenddienst Bozen (Cassa rurale di Bolzano, IBAN: IT 58 J 08081 11600 000305003229).</p>
 				</li>
 				<li><strong>Scadenza di pagamento</strong>
-					<p>La quota d’iscrizione deve essere versata tramite bonifico bancario sul conto corrente dello Jugenddienst Bozen entro cinque giorni lavorativi dall’invio dell’avviso di pagamento. Come causale nel bonifico deve essere inserito „KISO 2019“ con il nome del/la partecipante. L’iscrizione é soltanto valida dal momento dell’accredito della intera quota d’iscrizione. Scaduto il termine di pagamento, il /la figlio/a iscritto sarà spostato/a sulla lista d’attesa, senza ulteriore avviso di pagamento.</p>
+					<p>La quota d’iscrizione deve essere versata tramite bonifico bancario sul conto corrente dello Jugenddienst Bozen entro cinque giorni lavorativi dall’invio dell’avviso di pagamento. Come causale nel bonifico deve essere inserito „KISO 2020“ con il nome del/la partecipante. L’iscrizione é soltanto valida dal momento dell’accredito della intera quota d’iscrizione. Scaduto il termine di pagamento, il /la figlio/a iscritto sarà spostato/a sulla lista d’attesa, senza ulteriore avviso di pagamento.</p>
 				</li>
 				<li><strong>Rimborso</strong>
-					<p>La somma completa della quota d’iscrizione verrá rimborsata solo nei casi di malattia (a presentazione dell‘ attestato medico) oppure impedimento per eventi imprevedibili. In tutti gli altri casi di disdetta della prima settimana del KiSo, verrá rimborsata solamete il 50% della quota d’iscrizione. In caso di disdetta dopo la partenza della prima settimana del KiSo, la quota d’iscrizione non verrá piú rimborsata.</p>
+					<p>La somma completa della quota d’iscrizione verrà rimborsata solo nei casi di malattia (a presentazione dell‘ attestato medico) oppure impedimento per eventi imprevedibili. In tutti gli altri casi di disdetta della prima settimana del KISO, verrà rimborsata solamente il 50% della quota d’iscrizione. In caso di disdetta dopo la partenza della prima settimana del KISO, la quota d’iscrizione non verrà più rimborsata.</p>
 				</li>
 			</ul>
 		</li>
 		<li><strong>Assicurazione e sorveglianza</strong>
-			<p>I genitori sono responsabili per il trasporto (andata e ritorno) dei loro figli al rispettivo luogo del KiSo. Durante l’orario del KiSo, i/le partecipanti saranno sorvegliati/e dagli assistenti pedagogici.</p>
+			<p>I genitori sono responsabili per il trasporto (andata e ritorno) dei loro figli al rispettivo luogo del KISO. Durante l’orario del KISO, i/le partecipanti saranno sorvegliati/e dagli assistenti pedagogici.</p>
 		</li>
 		<li><strong>Handicap e intolleranze alimentari</strong>
-			<p>In caso di handicap fisici o mentali oppure intolleranze alimentari di un/a bambino/a partecipante, i genitori devono presentare un certificato medico al Jugenddienst Bozen entro due settimane dall'iscrizione. In caso contrario, il Jugenddienst Bozen non ne terrà conto durante il progetto.</p>
+			<p>In caso di handicap fisici o mentali oppure intolleranze alimentari di un/a bambino/a partecipante, i genitori devono presentare un certificato medico al Jugenddienst Bozen entro due settimane dall&#39;iscrizione. In caso contrario, il Jugenddienst Bozen non ne terrà conto durante il progetto.</p>
 		</li>
 		<li><strong>Generale</strong>
 			<p>Con l’iscrizione il genitore si dichiara d’accordo con le condizioni sopra citate. Per ulteriori chiarimenti si prega di non esitare a consultare i collaboratori dello Jugenddienst Bozen.</p>
