--- a/public/templates/info/info-kiso-it.html
+++ b/public/templates/info/info-kiso-it.html
@@ -1,16 +1,12 @@
 <div class='container'>
 	<h2><strong>KiSo – Kindersommer 2020</strong></h2>
-	<p>
-		Ulteriori informazioni seguiranno a breve.
-	</p>
-	<!--
-	<img src="./../../../../assets/KISO2019.jpg" style="height:500px;float:left;margin-right:15px" />
+	<!--<img src="./../../../../assets/KISO2019.jpg" style="height:500px;float:left;margin-right:15px" />-->
 	<h4>Chi può partecipare:</h4>
-	<p>Per bambini di qualsiasi madrelingua che frequentano le elementari.<br />Le attività vengono svolte in lingua tedesca, perciò è richiesta una sufficiente conoscenza della lingua tedesca.</p>
+	<p>Per ragazzi dagli 11 ai 15 anni di qualsiasi madrelingua che frequentano le elementari Le attività vengono svolte in lingua tedesca, perciò è richiesta una sufficiente conoscenza della lingua tedesca. Il KISO non è un corso di lingua.</p>
 	<h4>Quanti possono partecipare:</h4>
-	<p>Al massimo 42 bambini a settimana</p>
+	<p>Al massimo 12 ragazzi a settimana</p>
 	<h4>Quando è dove si svolge il KiSo:</h4>
-	<p><strong><time>Dal 17 giugno al 2 agosto 2019</time></strong><br />Centro Maria Heim, via Novacella 5</p>
+	<p><strong><time>Dal 17 giugno al 31 luglio 2020</time></strong><br />Centro Maria Heim, via Novacella 5</p>
 	<p>Da lunedì a venerdì dalle ore 8:30 alle ore 15:00<br />I genitori possono portare i bambini tra le ore 7:45 e le ore 8:30, e ritirarli tra le ore 15:00 e le ore 15:30.</p>
 	<h4>Costi:</h4>
 	<p>
@@ -25,58 +21,48 @@
 	<h4>L’equipe di animatori:</h4>
 	<p>L’educatrice sociale Martina Zampedri è la responsabile del progetto e lo svolgerà insieme ad un’equipe tra sette e nove animatori tra i 16 e i 26 anni provenienti dall’ambito associativo, giovani del progetto “ExPeerience” del centro giovani Papperlapapp e giovani con interessi e/o esperienze pedagogiche.</p>
 	<h4>Iscrizioni:</h4>
-	<p>L’iscrizione avviene online a partire da giovedì, <strong><time>14 marzo 2019 alle ore 19:00 </time></strong> sul sito  <strong><a href="www.kiso.bz.it">www.kiso.bz.it</a></strong> Importante: I genitori devono creare un account con nome utente e password su questo sito. Questo account può essere creato a partire dal 7 marzo 2019 e può essere usato anche in anni futuri.<br />In caso di domande rivolgersi a <a href="mailto:kiso@jd.bz.it">kiso@jd.bz.it</a>, <a href="tel:0471 972098">0471 972098</a> (di pomeriggio)</p>
+	<p>L’iscrizione avviene online a partire da giovedì, <strong><time>3 marzo 2020 alle ore 19:00 </time></strong> sul sito  <strong><a href="www.kiso.bz.it">www.kiso.bz.it</a></strong> Importante: I genitori devono creare un account con nome utente e password su questo sito. Questo account può essere creato a partire dal 25 febbraio 2020 e può essere usato anche in anni futuri.<br />In caso di domande rivolgersi a <a href="mailto:kiso@jd.bz.it">kiso@jd.bz.it</a>, <a href="tel:0471 972098">0471 972098</a> (di pomeriggio)</p>
 	<h4>Importante:</h4>
 	<p>I genitori possono iscrivere solo i propri figli.</p>
-	<p>Il bambino deve aver già frequentato la prima elementare (eccezione: fratelli minori che hanno concluso l’ultimo anno di scuola materna).<br />L’iscrizione è vincolante dal momento in cui Lei ottiene per iscritto la conferma dello Jugenddienst Bozen.</p>
-	<p>Si prega di leggere attentamente le nostre condizioni generali.</p>
-	<adress style="font-style:italic"><mark>Jugenddienst Bozen</mark><br />Pfarrplatz 24, piazza Parrocchia<br />39100 Bozen/Bolzano<br />0471 972098 (15.00-18.30 h)<br /><a href="mailto:kiso@jd.bz.it">kiso@jd.bz.it</a></adress><br />
-	<img src="./../../../../assets/jdb.png" style="vertical-align:bottom;height:110px;margin-left:15px" />
+	<p>Il bambino deve aver già frequentato la prima elementare (eccezione: fratelli minori che hanno concluso l’ultimo anno di scuola materna).</p>
+	<p><strong>Si prega di leggere attentamente le nostre condizioni generali.</strong></p>
+	<!-- <adress style="font-style:italic"><mark>Jugenddienst Bozen</mark><br />Pfarrplatz 24, piazza Parrocchia<br />39100 Bozen/Bolzano<br />0471 972098 (15.00-18.30 h)<br /><a href="mailto:kiso@jd.bz.it">kiso@jd.bz.it</a></adress><br />
+	<img src="./../../../../assets/jdb.png" style="vertical-align:bottom;height:110px;margin-left:15px" /> -->
 	<br />
 	<br />
-	<h2><strong>Le nostre settimane di progetto per ragazzi dai 11 ai 15 anni</strong></h2>
-	<h4>L'iscrizioni a <strong><time>15 marzo 2019</time></strong></h4>
-	<h3>Film ab</h3>
-	<img src="./../../../../assets/Kiso_Film.jpg" style="height:110px;float:left;margin-right:15px" />
-	<p>Let's make a movie! Che cosa succede esattamente davanti e dietro la telecamera? Nel nostro laboratorio cinematografico andremo a conoscere i vari ambiti intorno alla creazione di un film girando, montando e creando il nostro cortometraggio. Possiamo dare libero sfogo alle nostre idee e anche scivolare nei diversi ruoli sul set. Pronti? Azione!</p>
-	<p>
-	Età: 11-15 anni<br />
-	Periodo: dall'8 al 12 luglio 2019, dalle 09.00 alle 16.00 (pranzo incluso)<br />
-	Luogo: Ex-Agnello, Via Rencio, Bolzano<br />
-	Costi: 80,00 Euro/partecipante<br />
-	Referente: Willy Theil<br />			
-	</p>
-	<h3>Hip Hop Performance</h3>
-	<img src="./../../../../assets/Kiso_HipHop.jpg" style="height:110px;float:left;margin-right:15px" />
-	<p>L'hip-hop è più di uno stile di danza: è una cultura - in cui movimento, musica e stile di vita si incontrano. Nel laboratorio si praticano passi base e combinazioni di passi costruttivi di stili diversi, che poi si fondono in una coreografia folle. Pronto?....... e 5,6,7,8!</p>
-	<p>
-	Età: 11-15 anni<br />
-	Periodo: dal 15 al 19 luglio 2019, dalle 09.00 alle 16.00 (pranzo incluso)<br />
-	Luogo: Ex-Agnello, Via Rencio, Bolzano<br />
-	Costi: 80,00 Euro/partecipante<br />
-	Referente: Valentina Bagnis<br />
-	</p>
-	<h3>Fortnite Week</h3>
-	<img src="./../../../../assets/Kiso_Fortnite.jpg" style="height:110px;float:left;margin-right:15px" />
-	<p>Una settimana dedicata al videogioco. Non solo giocheremo insieme il popolare Fortnite, ma ci immergeremo anche nella realtà virtuale ed esploreremo il mezzo culturale dei "videogames" in generale, utilizzando vari metodi pedagogici. Cosa c'è dietro questi mondi di pixel? Cosa rende un buon videogioco? Quali sono i ruoli che assumiamo come giocatori? Let’s play!</p>
-	<p>
-	Età: 12-15 anni<br />
-	Periodo: dal 22 al 26 luglio 2019, dalle 09.00 alle 16.00 (pranzo incluso)<br />
-	Luogo: Ex-Agnello, Via Rencio, Bolzano<br />
-	Costi: 80,00 Euro/partecipante<br />
-	Referente: Lukas Paoli, in collaborazione con Forum Prevenzione<br />			
-	</p>
-	<h3>Film & Dance</h3>
-	<img src="./../../../../assets/Kiso_Dance.jpg" style="height:110px;float:left;margin-right:15px" />
-	<p>Attenzione registi/e e ballerini/e! Tutti insieme troveremo fat beats, svilupperemo una coreografia ganza e produrremo un video di musica o un filmato. Non ci sono limiti alla tua immaginazione.</p>
-	<p>
-	Età: 11-15 anni<br />
-	Periodo: dal 29 luglio al 2 agosto 2019, , 09.00-16.00 (pranzo incluso)<br />
-	Luogo: Ex-Agnello, Via Rencio, Bolzano<br />
-	Costi: 90,00 Euro/partecipante<br />
-	Referenti: Valentina Bagnis e Willy Theil<br />		
-	</p>
--->
+	<h2><strong>Summer Weeks per ragazzi</strong></h2>
+	<p>Numero di partecipanti a settimana:  mass. 12</p>
+	<p>Per bambini di qualsiasi madrelingua che frequentano la scuola media<br />I laboratori vengono svolti in lingua tedesca, perciò è richiesta una sufficiente conoscenza della lingua tedesca. Le Summer Weeks non sono un corso di lingua.</p>
+	<h4>Quando</h4>
+	<p>Dal 6 luglio al 31 luglio 2020<br />Da lunedì a venerdì dalle ore 8:30 alle ore 15:30</p>
+	<h4>Costi/Quota iscrizione:</h4>
+	<p>80€ a settimana per il primo bambino <br />Prezzo facoltativo di 90€ a settimana, per sostenere il progetto<br />Per fratelli e sorelle 70€ a settimana<br />Nel prezzo sono comprese l’attività, il pranzo, una merenda e una maglietta</p>
+	<br />
+	<h3>Gaming Week</h3>
+	<h4>(referenti da definire)</h4>
+	<p>Una settimana dedicata al videogioco. Non solo giocheremo insieme, ma ci immergeremo anche nella realtà virtuale ed esploreremo il mezzo culturale dei &quot;videogames&quot; in generale, utilizzando vari metodi pedagogici. Cosa c&#39;è dietro questi mondi di pixel? Cosa rende un buon videogioco? Quali sono i ruoli che assumiamo come giocatori? Let’s play!</p>
+	<p>Periodo: dal 6 al 10 luglio 2020</p>
+	<br />
+	<h3>Abenteuer Mathematik</h3>
+	<h4>Andi Scartezzini &amp; Harald Niederseer</h4>
+	<p>Scoprite un nuovo ed entusiasmante approccio alla matematica per una settimana. Per tutti coloro che amano la matematica, ma anche una nuova opportunità per chi dice &quot; in matematica sono una schiappa &quot; o &quot;la matematica fa schifo&quot;!</p>
+	<p>Periodo: dal 13 al 17 luglio 2020</p>
+	<br />
+	<h3>Theater Workshop</h3>
+	<h4>Miriam Dreher &amp; Nadja Tröster</h4>
+	<p>Ti piace fare l’attore/l’attrice e vuoi scambiarti con altri ragazzi che condividono la tua passione? Vuoi imparare a presentare le tue storie in modo creativo sul palcoscenico e a mettere in scena un&#39;opera teatrale fatta da te stesso sotto la guida di un professionista? Ti aspetta un sacco di divertimento!</p>
+	<p>Periodo: dal 20 al 24 luglio 2020</p>
+	<br />
+	<h3>Film &amp; Hip Hop</h3>
+	<h4>Valentina Bagnis &amp; Willy Theil</h4>
+	<p>Ti piace la musica, ti interessa il cinema o ti piace ballare e recitare? Ti piacerebbe far parte di un video musicale dall&#39;idea al taglio finale? Vuoi stare davanti o dietro la telecamera? Ti piace incontrare nuove persone e vuoi creare qualcosa di più che un semplice video TikTok? Allora è il posto giusto per te! Non ci sono limiti alla tua fantasia.</p>
+	<p>Periodo: dal 27 al 31 luglio 2020</p>
+	<br />
+	<br />
+	<h4>Iscrizioni</h4>
+	<p>L’iscrizione avviene online a partire da giovedì, <strong><time>giovedì, 3 marzo 2020 alle ore 19:00</time></strong> sul sito <strong><a href="www.kiso.bz.it">www.kiso.bz.it</a></strong> sito www.KISO.bz.it Importante: I genitori devono creare un account con nome utente e password su questo sito. Questo account può essere creato a partire dal 25 febbraio 2020 e può essere usato anche in anni futuri.<br />In caso di domande rivolgersi a <a href="mailto:kiso@jd.bz.it">kiso@jd.bz.it</a>, <a href="tel:0471 972098">0471 972098</a> (di pomeriggio)</p>
+	<h4>Importante</h4>
+	<p>I genitori possono iscrivere solo i propri figli</p>
 
 	<img src="./../../../../assets/logo-jungschar.png" style="vertical-align:bottom;height:50px;margin-left:15px" />
 	<img src="./../../../../assets/raika.png" style="vertical-align:bottom;height:70px;margin-left:15px" />
