--- a/public/templates/registration/registration.html
+++ b/public/templates/registration/registration.html
@@ -51,12 +51,12 @@
 							</div>
 						</div>
 						<!-- ADDRESSCHILD -->
-						<!--<div class='form-group' ng-class='{ "has-error": registrationForm.addressChild.$invalid }' ng-show="!platform.isJugendsommer() || !platform.isJDBL()">
+						<div class='form-group' ng-class='{ "has-error": registrationForm.addressChild.$invalid }' ng-show="!platform.isJugendsommer() || !platform.isJDBL()">
 							<label for='addressChild' class='control-label col-sm-2'>{{"RESERVATION.LABEL_ADDRESS_CHILD" | translate}}</label>
 							<div class='col-sm-8'>
 								<input name='addressChild' type='text' ng-model='addressChild' ng-disabled="disabledForSibling" maxlength='100' class='form-control' required></input>
 							</div>
-						</div>-->
+						</div>
 						<!-- CITYCHILD -->
 						<div class='form-group' ng-class='{ "has-error": registrationForm.cityChild.$invalid }'>
 							<label for='cityChild' class='control-label col-sm-2'>{{"RESERVATION.LABEL_CITY_CHILD" | translate}}</label>
