new images kiso

--- a/public/templates/info/info-kiso-it.html
+++ b/public/templates/info/info-kiso-it.html
@@ -1,6 +1,6 @@
 <div class='container'>
 	<h2><strong>KiSo – Kindersommer 2020</strong></h2>
-	<!--<img src="./../../../../assets/KISO2019.jpg" style="height:500px;float:left;margin-right:15px" />-->
+	<img src="./../../../../assets/kiso2020.jpg" style="height:500px;float:left;margin-right:15px" />-->
 	<h4>Chi può partecipare:</h4>
 	<p>Per ragazzi dagli 11 ai 15 anni di qualsiasi madrelingua che frequentano le elementari Le attività vengono svolte in lingua tedesca, perciò è richiesta una sufficiente conoscenza della lingua tedesca. Il KISO non è un corso di lingua.</p>
 	<h4>Quanti possono partecipare:</h4>
@@ -39,21 +39,25 @@
 	<p>80€ a settimana per il primo bambino <br />Prezzo facoltativo di 90€ a settimana, per sostenere il progetto<br />Per fratelli e sorelle 70€ a settimana<br />Nel prezzo sono comprese l’attività, il pranzo, una merenda e una maglietta</p>
 	<br />
 	<h3>Gaming Week</h3>
+	<img src="./../../../../assets/kiso_gaming.png" style="height:110px;float:left;margin-right:15px" />
 	<h4>(referenti da definire)</h4>
 	<p>Una settimana dedicata al videogioco. Non solo giocheremo insieme, ma ci immergeremo anche nella realtà virtuale ed esploreremo il mezzo culturale dei &quot;videogames&quot; in generale, utilizzando vari metodi pedagogici. Cosa c&#39;è dietro questi mondi di pixel? Cosa rende un buon videogioco? Quali sono i ruoli che assumiamo come giocatori? Let’s play!</p>
 	<p>Periodo: dal 6 al 10 luglio 2020</p>
 	<br />
 	<h3>Abenteuer Mathematik</h3>
+	<img src="./../../../../assets/kiso_math.png" style="height:110px;float:left;margin-right:15px" />
 	<h4>Andi Scartezzini &amp; Harald Niederseer</h4>
 	<p>Scoprite un nuovo ed entusiasmante approccio alla matematica per una settimana. Per tutti coloro che amano la matematica, ma anche una nuova opportunità per chi dice &quot; in matematica sono una schiappa &quot; o &quot;la matematica fa schifo&quot;!</p>
 	<p>Periodo: dal 13 al 17 luglio 2020</p>
 	<br />
 	<h3>Theater Workshop</h3>
+	<img src="./../../../../assets/kiso_photo.jpg" style="height:110px;float:left;margin-right:15px" />
 	<h4>Miriam Dreher &amp; Nadja Tröster</h4>
 	<p>Ti piace fare l’attore/l’attrice e vuoi scambiarti con altri ragazzi che condividono la tua passione? Vuoi imparare a presentare le tue storie in modo creativo sul palcoscenico e a mettere in scena un&#39;opera teatrale fatta da te stesso sotto la guida di un professionista? Ti aspetta un sacco di divertimento!</p>
 	<p>Periodo: dal 20 al 24 luglio 2020</p>
 	<br />
 	<h3>Film &amp; Hip Hop</h3>
+	<img src="./../../../../assets/kiso_dance.png" style="height:110px;float:left;margin-right:15px" />
 	<h4>Valentina Bagnis &amp; Willy Theil</h4>
 	<p>Ti piace la musica, ti interessa il cinema o ti piace ballare e recitare? Ti piacerebbe far parte di un video musicale dall&#39;idea al taglio finale? Vuoi stare davanti o dietro la telecamera? Ti piace incontrare nuove persone e vuoi creare qualcosa di più che un semplice video TikTok? Allora è il posto giusto per te! Non ci sono limiti alla tua fantasia.</p>
 	<p>Periodo: dal 27 al 31 luglio 2020</p>
