--- a/public/templates/info/info-kiso-de.html
+++ b/public/templates/info/info-kiso-de.html
@@ -1,6 +1,6 @@
 <div class='container'>
 	<h2><strong>KiSo – Kindersommer 2020</strong></h2>
-	<img src="./../../../../assets/kiso2020.png" style="height:500px;float:left;margin-right:15px" />-->
+	<img src="./../../../../assets/kiso2020.png" style="height:500px;float:left;margin-right:15px" />
 	<h4>Wer darf daran teilnehmen</h4>
 	<p>Für Grundschulkinder aller Muttersprachen.<br />Das Programm wird in deutscher Sprache
 		angeboten, somit werden genügend Grundkenntnisse der deutschen Sprache vorausgesetzt. Der KiSo ist kein Sprachkurs.</p>
@@ -50,6 +50,7 @@
 	<h3>Abenteuer Mathematik</h3>
 	<img src="./../../../../assets/kiso_math.png" style="height:110px;float:left;margin-right:15px" />
 	<h5>Andi Scartezzini &amp; Harald Niederseer</h5>
+    <p>Zusammenarbeit mit dem Jugendzentrum papperlapapp.</p>
 	<p>Eine Woche lang einen neuen und spannenden Zugang zur Welt der Mathematik entdecken. Für alle die Mathematik lieben, aber auch eine neue Chance für diejenigen, die sagen &quot;in Mathe bin ich schlecht&quot; oder &quot;Mathe ist blöd&quot;!</p>
 	<p>Zeitraum: 13. bis 17. Juli 2020</p>
 	<br />
@@ -67,7 +68,7 @@
 	<br />
 	<br />
     <h4>Anmeldung:</h4>
-	<p>Die Online-Anmeldung findet ab Donnerstag, <strong><time>3. März 2020 ab 19.00 Uhr</time></strong> unter <strong><a href="www.kiso.bz.it">www.kiso.bz.it</a></strong> statt. Wichtig: Alle Eltern müssen einen Account mit Username und Passwort auf selbiger Internetseite erstellen. Der Account kann ab 25. Februar 2020 angelegt werden und ist für weitere Jahre wieder verwendbar.<br />Für Fragen: <a href="mailto:kiso@jd.bz.it">kiso@jd.bz.it</a>, <a href="tel:0471 972098">0471 972098</a> (nachmittags)</p>
+	<p>Die Online-Anmeldung findet ab Donnerstag, <strong><time>19. März 2020 ab 19.00 Uhr</time></strong> unter <strong><a href="www.kiso.bz.it">www.kiso.bz.it</a></strong> statt. Wichtig: Alle Eltern müssen einen Account mit Username und Passwort auf selbiger Internetseite erstellen. Der Account kann ab 25. Februar 2020 angelegt werden und ist für weitere Jahre wieder verwendbar.<br />Für Fragen: <a href="mailto:kiso@jd.bz.it">kiso@jd.bz.it</a>, <a href="tel:0471 972098">0471 972098</a> (nachmittags)</p>
 	<h4>Wichtig:</h4>
 	<p>Alle Eltern und Erziehungsberechtigten dürfen nur die eigenen Kinder einschreiben</p>
 
