--- a/public/templates/info/info-kiso-it.html
+++ b/public/templates/info/info-kiso-it.html
@@ -1,6 +1,6 @@
 <div class='container'>
 	<h2><strong>KiSo – Kindersommer 2020</strong></h2>
-	<img src="./../../../../assets/kiso2020.jpg" style="height:500px;float:left;margin-right:15px" />-->
+	<img src="./../../../../assets/kiso2020.png" style="height:500px;float:left;margin-right:15px" />
 	<h4>Chi può partecipare:</h4>
 	<p>Per ragazzi dagli 11 ai 15 anni di qualsiasi madrelingua che frequentano le elementari Le attività vengono svolte in lingua tedesca, perciò è richiesta una sufficiente conoscenza della lingua tedesca. Il KISO non è un corso di lingua.</p>
 	<h4>Quanti possono partecipare:</h4>
@@ -47,6 +47,7 @@
 	<h3>Abenteuer Mathematik</h3>
 	<img src="./../../../../assets/kiso_math.png" style="height:110px;float:left;margin-right:15px" />
 	<h4>Andi Scartezzini &amp; Harald Niederseer</h4>
+	<p>In collaborazione con il centro giovanile papperlapapp.</p>
 	<p>Scoprite un nuovo ed entusiasmante approccio alla matematica per una settimana. Per tutti coloro che amano la matematica, ma anche una nuova opportunità per chi dice &quot; in matematica sono una schiappa &quot; o &quot;la matematica fa schifo&quot;!</p>
 	<p>Periodo: dal 13 al 17 luglio 2020</p>
 	<br />
@@ -64,7 +65,7 @@
 	<br />
 	<br />
 	<h4>Iscrizioni</h4>
-	<p>L’iscrizione avviene online a partire da giovedì, <strong><time>giovedì, 3 marzo 2020 alle ore 19:00</time></strong> sul sito <strong><a href="www.kiso.bz.it">www.kiso.bz.it</a></strong> sito www.KISO.bz.it Importante: I genitori devono creare un account con nome utente e password su questo sito. Questo account può essere creato a partire dal 25 febbraio 2020 e può essere usato anche in anni futuri.<br />In caso di domande rivolgersi a <a href="mailto:kiso@jd.bz.it">kiso@jd.bz.it</a>, <a href="tel:0471 972098">0471 972098</a> (di pomeriggio)</p>
+	<p>L’iscrizione avviene online a partire da giovedì, <strong><time>giovedì, 19 marzo 2020 alle ore 19:00</time></strong> sul sito <strong><a href="www.kiso.bz.it">www.kiso.bz.it</a></strong> sito www.KISO.bz.it Importante: I genitori devono creare un account con nome utente e password su questo sito. Questo account può essere creato a partire dal 25 febbraio 2020 e può essere usato anche in anni futuri.<br />In caso di domande rivolgersi a <a href="mailto:kiso@jd.bz.it">kiso@jd.bz.it</a>, <a href="tel:0471 972098">0471 972098</a> (di pomeriggio)</p>
 	<h4>Importante</h4>
 	<p>I genitori possono iscrivere solo i propri figli</p>
 
