add faqs for kiso

--- a/public/templates/info/faq-kiso-de.html
+++ b/public/templates/info/faq-kiso-de.html
@@ -1,4 +1,77 @@
 <div class='container'>
-    <h2>Wichtige FAQs zu den Anmeldemodalitäten</h2>
-
+    <h2 class='orange'>Wichtige FAQs zu den Anmeldemodalitäten</h2>
+    
+    <button class="btn btn-default" type="button" data-toggle="collapse" data-target="#collapse1" aria-expanded="false" aria-controls="collapseExample">
+        Ab wann kann ich mein Kind anmelden?  <span class="caret"></span>
+    </button>
+    <div class="collapse" id="collapse1">
+    <div class="well">
+    Die Anmeldungen beginnen am Dienstag, 3. März pünktlich um 19.00 Uhr. Erst in diesem Moment erscheint der Button <button type="button" class="btn btn-xlarge btn-success"><span class='glyphicon glyphicon-user'></span><br /><div style="font-size:25%">{{"BTN.RESERVE" | translate}}</div></button>. Mit Klick auf diesen Button erscheint das Anmeldeformular (siehe unten). <br />UM SICH ANMELDEN ZU KÖNNEN, MÜSSEN SIE ÜBER EIN BENUTZERKONTO VERFÜGEN UND EINGELOGGT SEIN!
+    </div>
+    </div>
+    <br />
+    <button class="btn btn-default" type="button" data-toggle="collapse" data-target="#collapse2" aria-expanded="false" aria-controls="collapseExample">
+        Wie weiß ich, ob die Anmeldung geklappt hat?  <span class="caret"></span>
+    </button>
+    <div class="collapse" id="collapse2">
+    <div class="well">
+    Falls innerhalb weniger Minuten nicht eine automatische Rückantwort an die angegebene E-Mail-Adresse des Erziehungsberechtigten zum technischen Erfolg der Anmeldung erhalten wird, ist ein Fehler passiert und muss die Anmeldung erneut abgeschickt werden.
+    </div>
+    </div>
+    <br />
+    <button class="btn btn-default" type="button" data-toggle="collapse" data-target="#collapse3" aria-expanded="false" aria-controls="collapseExample">
+        Wie kann ich mein Kind für mehrere Wochen anmelden?  <span class="caret"></span>
+    </button>
+    <div class="collapse" id="collapse3">
+    <div class="well">
+    Ihr Kind muss für jede Woche einzeln angemeldet werden. Um Ihr Kind für mehrere der 7 Wochen anzumelden, müssen Sie somit den Anmeldevorgang entsprechend oft wiederholen. <br />Tipp: Verwenden Sie den Button <button class='btn btn-success'>{{"RESERVATION.LABEL_LOAD_PREVIOUS" | translate}}</button> um Ihre vorherigen Anmeldedaten automatisch einzufügen.
+    </div>
+    </div>
+    <br />
+    <button class="btn btn-default" type="button" data-toggle="collapse" data-target="#collapse4" aria-expanded="false" aria-controls="collapseExample">
+        Wie funktioniert der Geschwisterrabatt?  <span class="caret"></span>
+    </button>
+    <div class="collapse" id="collapse4">
+    <div class="well">
+    Der Geschwisterrabatt von 10,00 Euro gilt nur für das zweite Kind (bzw. alle weiteren Kinder), falls es in derselben Woche wie sein Bruder bzw. seine Schwester angemeldet ist. BITTE VERWENDEN SIE DAFÜR DEN BUTTON <button class='btn btn-warning'><img src="../../assets/sibling.png" style="height:20px;margin:2px" class="img-rounded"><strong>{{"RESERVATION.LABEL_LOAD_SIBLING" | translate}}</strong></button> !
+    <br />(Rechenbeispiel: Lukas und Anna sind beide für die 3. und 4. KISO-Woche angemeldet. Der zu überweisende Teilnahme-Gesamtbetrag beläuft sich auf 80+70+80+70=300,00 Euro.)
+    </div>
+    </div>
+    <br />
+    <button class="btn btn-default" type="button" data-toggle="collapse" data-target="#collapse5" aria-expanded="false" aria-controls="collapseExample">
+        Wie zahle ich den Solidaritätsbeitrag?  <span class="caret"></span>
+    </button>
+    <div class="collapse" id="collapse5">
+    <div class="well">
+    Falls Sie die Option „Solidaritätsbeitrag“ gewählt und sich somit freundlicherweise dazu entschieden haben, das Programm des „KISO – Kindersommer“ zu unterstützen, bitten wir Sie DEN WÖCHENTLICHEN AUFPREIS VON 10 EURO ZUSAMMEN MIT DEM TEILNAHMEBEITRAG ZU ÜBERWEISEN!
+    <br />(Rechenbeispiel: Max wird für die 1., 5. und 6. KISO-Woche angemeldet, für die letzten beiden Wochen wird ein Solidaritätsbeitrag gewählt. Der zu überweisende Teilnahme-Gesamtbetrag beläuft sich auf 80+90+90=260,00 Euro.)
+    </div>
+    </div>
+    <br />
+    <button class="btn btn-default" type="button" data-toggle="collapse" data-target="#collapse6" aria-expanded="false" aria-controls="collapseExample">
+        Wie erfahre ich die Position meines Kindes auf der Warteliste?  <span class="caret"></span>
+    </button>
+    <div class="collapse" id="collapse6">
+    <div class="well">
+    Innerhalb von 5 Werktagen erhalten Sie auf die bei der Anmeldung angegebene E-Mail-Adresse eine Zahlungsaufforderung oder einen Verweis, dass Ihr Kind auf die Warteliste gesetzt wurde. Aus technischen und organisatorischen Gründen können wir Sie leider nicht laufend über die Position Ihres Kindes auf der Warteliste informieren. WIR KONTAKTIEREN SIE ABER UMGEHEND, SOBALD EIN PLATZ FÜR IHR KIND FREI WURDE!
+    </div>
+    </div>
+    <br />
+    <button class="btn btn-default" type="button" data-toggle="collapse" data-target="#collapse7" aria-expanded="false" aria-controls="collapseExample">
+        Wann ist die Teilnahme meines Kindes definitiv und rechtsgültig?  <span class="caret"></span>
+    </button>
+    <div class="collapse" id="collapse7">
+    <div class="well">
+    Die effektive Teilnahme Ihres Kindes an der jeweiligen Woche ist erst dann garantiert, sobald der Teilnahmebeitrag in voller Höhe überwiesen wurde. Dem wiederum geht eine Zahlungsaufforderung voraus (siehe oben). FALLS IHR KIND AUF DER WARTELISTE IST, ÜBERWEISEN SIE DEN TEILNAHMEBEITRAG ERST NACH ERHALT DER ZAHLUNGSAUFFORDERUNG, SOBALD EIN PLATZ FREI WURDE!
+    </div>
+    </div>
+    <br />
+    <button class="btn btn-default" type="button" data-toggle="collapse" data-target="#collapse8" aria-expanded="false" aria-controls="collapseExample">
+        Wie erhalte ich meine Zahlungsbestätigung?  <span class="caret"></span>
+    </button>
+    <div class="collapse" id="collapse8">
+    <div class="well">
+    In Ihrem User-Account können Sie unter dem Menüfeld <button class="btn">{{'NAV.MYRES' | translate}}</button> den Status Ihrer getätigten Anmeldungen einsehen. Sobald in der Spalte „bezahlt“ ein Kreuzchen aufscheint, ist Ihre Zahlung gebucht und die Anmeldung somit rechtsgültig. BITTE KONTAKTIEREN SIE UNS ERST, WENN NACH FÜNF WERKTAGEN AB ZAHLUNGSDATUM KEIN ENTSPRECHENDES KREUZCHEN AUFSCHEINT!
+    </div>
+    </div>
 </div>
