--- a/public/templates/info/info-kiso-it.html
+++ b/public/templates/info/info-kiso-it.html
@@ -2,24 +2,23 @@
 	<h2><strong>KiSo – Kindersommer 2020</strong></h2>
 	<img src="./../../../../assets/kiso2020.png" style="height:500px;float:left;margin-right:15px" />
 	<h4>Chi può partecipare:</h4>
-	<p>Per ragazzi dagli 11 ai 15 anni di qualsiasi madrelingua che frequentano le elementari Le attività vengono svolte in lingua tedesca, perciò è richiesta una sufficiente conoscenza della lingua tedesca. Il KISO non è un corso di lingua.</p>
+	<p>Per bambini di qualsiasi madrelingua che frequentano le elementari. Le attività vengono svolte in lingua tedesca, perciò è richiesta una sufficiente conoscenza della lingua tedesca.</p>
 	<h4>Quanti possono partecipare:</h4>
-	<p>Al massimo 12 ragazzi a settimana</p>
+	<p>Al massimo 42 ragazzi a settimana</p>
 	<h4>Quando è dove si svolge il KiSo:</h4>
-	<p><strong><time>Dal 17 giugno al 31 luglio 2020</time></strong><br />Centro Maria Heim, via Novacella 5</p>
-	<p>Da lunedì a venerdì dalle ore 8:30 alle ore 15:00<br />I genitori possono portare i bambini tra le ore 7:45 e le ore 8:30, e ritirarli tra le ore 15:00 e le ore 15:30.</p>
+	<p><strong><time>Dal 17 giugno al 31 luglio 2020</time></strong></p>
+	<p>Da lunedì a venerdì dalle ore 8:30 alle ore 15:30 (la prima settimana inizia mercoledì)*<br />I genitori possono portare i bambini tra le ore 7:45 e le ore 8:30, e ritirarli tra le ore 15:00 e le ore 15:30</p>
+	<h4>Dove:</h4>
+	<p>Centro Maria Heim, Via Novacella 5</p>
 	<h4>Costi:</h4>
 	<p>
-	80€ a settimana per il primo bambino<br />
-	NOVITÀ: prezzo facoltativo di 90€ a settimana, per sostenere il progetto.<br />
-	Per fratelli e sorelle 70€ a settimana <br />
-	Nel prezzo sono comprese l’attività, il pranzo, una merenda e una maglietta.
+		80€ a settimana per il primo bambino *(1a settimana a giugno: 50,00 euro)<br />Prezzo facoltativo di 90€ a settimana, per sostenere il progetto<br />Per fratelli e sorelle 70€ a settimana *(1a settimana a giugno: 45,00 euro)<br />	Nel prezzo sono comprese l’attività, il pranzo, una merenda e una maglietta
     </p>
 	<h4>Attività:</h4>
 	<p>I bambini passano la maggior parte del tempo all’aperto. Nelle giornate molto calde e di pioggia le attività si svolgeranno in casa. Tempo permettendo una volta in settimana i bambini vanno in gita nei dintorni di Bolzano. Inoltre ogni settimana viene organizzata una grigliata in giardino.</p>
 	<p>Il nostro obiettivo è offrire ai genitori un punto di appoggio per il periodo estivo, e ai bambini uno spazio protetto dove possano godersi il tempo libero e le varie attività stando tra coetanei. I giochi e le attività vogliono promuovere la creatività dei bambini e la conoscenza e il rispetto dei valori fondamentali per la convivenza.</p>
-	<h4>L’equipe di animatori:</h4>
-	<p>L’educatrice sociale Martina Zampedri è la responsabile del progetto e lo svolgerà insieme ad un’equipe tra sette e nove animatori tra i 16 e i 26 anni provenienti dall’ambito associativo, giovani del progetto “ExPeerience” del centro giovani Papperlapapp e giovani con interessi e/o esperienze pedagogiche.</p>
+	<h4>L’equipe di animatori e animatrici:</h4>
+	<p>Anche quest’anno l’educatrice sociale Martina Zampedri è la responsabile del progetto e lo svolgerà insieme ad un’equipe tra sette e nove animatori tra i 16 e i 26 anni provenienti dall’ambito associativo, giovani del progetto “ExPeerience” del centro giovani Papperlapapp e giovani con interessi e/o esperienze pedagogiche.</p>
 	<h4>Iscrizioni:</h4>
 	<p>L’iscrizione avviene online a partire da giovedì, <strong><time>3 marzo 2020 alle ore 19:00 </time></strong> sul sito  <strong><a href="www.kiso.bz.it">www.kiso.bz.it</a></strong> Importante: I genitori devono creare un account con nome utente e password su questo sito. Questo account può essere creato a partire dal 25 febbraio 2020 e può essere usato anche in anni futuri.<br />In caso di domande rivolgersi a <a href="mailto:kiso@jd.bz.it">kiso@jd.bz.it</a>, <a href="tel:0471 972098">0471 972098</a> (di pomeriggio)</p>
 	<h4>Importante:</h4>
